src/stylesheets/App.css
  
* {box-sizing: border-box;}

.main-head {
    grid-area: header;
}
.content {
    grid-area: content;
}
.main-menu {
    grid-area: nav;
}
.main-footer {
    grid-area: footer;
}

.wrapper {
    margin: 0 auto;
    display: grid;
    grid-gap: 20px;
    grid-template-areas: 
        "header"
        "nav"
        "content"
        "footer";
}

.subwrapper {
    margin: 0 auto;
    display: grid;
    grid-gap: 10px;
    grid-template-areas: 
        "sub-header"
        "sub-content"
        "sub-footer";
}

.sub-head {
    grid-area: sub-header;
}
.sub-content {
    grid-area: sub-content
}
.sub-footer {
    grid-area: sub-footer;
}

@media (min-width: 700px) {
    .wrapper {
        grid-template-columns: 1fr 4fr;
        grid-template-areas: 
        "header header"
        "nav    content"
        "nav    content"
        "footer footer"
    }
    nav ul {
        flex-direction: column;
    }
}

